Solo Web Page Narrative

--- a/Solo Website/narrative.html
+++ b/Solo Website/narrative.html
@@ -33,10 +33,28 @@
                 </nav>
             </div>
         </header>
+
+        <article>
+            <h1>My Learning Narrative!</h1>
+            <br />
+            <p><b>To describe what my learning narrative is</b> a hard thing to do.
+            There is a lot that I want to learn while I am not only in school but afterwards as well.
+            I know that we are only at the tip of the iceberg with programming, but I already feel like I have learned a lot especially
+            when it comes to HTML. I feel quite advanced in HTML and feel capable enough to make a <b>very</b> good website with enough time and practice.</p>
+
+            <p>Some things that I am looking forward to learning are the C languages, trying to differentiate the syntaxes and whatnot will be a difficult task for me but
+                I enjoy learning about things that I am interested in and I feel very inclined to learn everything that I can in college and take my time with learning.
+            </p>
+
+            <p>I have very much enjoyed my first semester at COGS, and am excited to see what future semesters/years bring.</p>
+
+        </article>
         <footer>
-            <p>Noah Taylor</p>
-            <p>Copyright 2023</p>
-            <p>COGS Final Project</p>
+            <p>Noah Taylor
+            <br />
+            Copyright 2023
+            <br />
+            COGS WEBD Final Project</p>
         </footer>
     </body>
     </html>
