Solo Website Contact

--- a/Solo Website/contact.html
+++ b/Solo Website/contact.html
@@ -36,24 +36,37 @@
         <div class="social">
         <h1>Social Media</h1>
             <p> <b>Twitter: </b>@_newah 
+                <br />
                 <b>Snapchat: </b>newah9247 
+                <br />
                 <b>Instagram: </b>n_e_w_a_h 
+                <br />
                 <b>Hive: </b>newah 
+                <br />
                 <b>Discord: </b>newah#9247 </p>
         </div>
 
         <div class="phone">
         <h1>Phone</h1>
             <p><b>Personal: </b>+1(902)804-1666
+                <br />
             <b>Work: </b>N/A
+                <br />
             <b>Home: </b>N/A</p>
         </div>
 
         <div class="email">
         <h1>Email</h1>
             <p><b>Personal: </b>nwtaylor04@gmail.com
+                <br />
             <b>School: </b>w0472168@nscc.ca</p>
         </div>
+
+        <article>
+            <a class="twitter-timeline" data-lang="en" data-width="1000" data-height="800" data-theme="dark" 
+            href="https://twitter.com/_newah?ref_src=twsrc%5Etfw">
+            Tweets by _newah</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
 
         <div class="flex-wrapper">
             <footer>
