Solo Website Work Examples

--- a/Solo Website/workex.html
+++ b/Solo Website/workex.html
@@ -33,3 +33,12 @@
                 </nav>
             </div>
         </header>
+
+        <article>
+            <h1>Here are some examples of my first semester work!</h1>
+            <img src="IMAGE/ex1.png" alt="example work 1">
+            <img src="IMAGE/ex2.png" alt="example work 2">
+            <img src="IMAGE/ex3.png" alt="example work 3">
+            <img src="IMAGE/ex4.png" alt="example work 4">
+
+        </article>
