Solo Website Work Examples

--- a/Solo Website/workex.html
+++ b/Solo Website/workex.html
@@ -14,6 +14,7 @@
 		<title>Work Examples</title>
 		<link rel="stylesheet" href="CSS/nav.css">
         <link rel="stylesheet" href="CSS/workex.css">
+        <link href="github-widget/github-widget.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -35,10 +36,24 @@
         </header>
 
         <article>
-            <h1>Here are some examples of my first semester work!</h1>
-            <img src="IMAGE/ex1.png" alt="example work 1">
-            <img src="IMAGE/ex2.png" alt="example work 2">
-            <img src="IMAGE/ex3.png" alt="example work 3">
-            <img src="IMAGE/ex4.png" alt="example work 4">
+            <h1>Here is a list of a few things that I have done</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#ex1">Example One</a></li>
+                        <img src="ex1.png" alt="work example 1">
+                        <br />
+                        <li><a href="#ex1">Example Two</a></li>
+                        <img src="ex1.png" alt="work example 1">
+                        <br />
+                        <li><a href="#ex1">Example Three</a></li>
+                        <img src="ex1.png" alt="work example 1">
+                        <br />
+                        <li><a href="#ex1">Example Four</a></li>
+                        <img src="ex1.png" alt="work example 1">
+
+                    </ul>
+                </nav>
 
         </article>
+    </body>
+</html>
